# python-client

./: .coveragerc  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py  sonar-project.properties
.github/workflows/: ci-pipeline.yml  release.yml
examples/: data_cleansing.py  data_ingest.py  data_preprocessing.py  empty_usage.py  pyproject.toml  run_example.sh  set_api_key.sh  set_api_token.sh  training.py
examples/house_prices/: Untitled.ipynb  linear-regression-house-price-prediction.ipynb  regularized-linear-models.ipynb
examples/house_prices/.ipynb_checkpoints/: linear-regression-house-price-prediction-checkpoint.ipynb  regularized-linear-models-checkpoint.ipynb
examples/serving/: serving.py
examples/tensorflow/: linear_regression.ipynb  neuronal_network.ipynb  neuronal_network.py  neuronal_network_2.py  serving.py
examples/training/: app.py  cleaned.csv  data_cleansing.py  data_ingest.py  parameters.py  training.py
examples/training/sub/: data.txt
examples/usa-housing/: .env  app.py
mlaide/: __init__.py  _file_utils.py  _model_deser.py  _model_serializer.py  active_artifact.py  active_experiment.py  active_run.py  client.py  error.py  git_resolver.py  mapper.py
mlaide/_api_client/: client.py  errors.py
mlaide/_api_client/api/: _api_commons.py  artifact_api.py  experiment_api.py  run_api.py
mlaide/_api_client/dto/: __init__.py  artifact_dto.py  error.py  experiment_dto.py  experiment_ref_dto.py  file_hash_dto.py  git_dto.py  run_dto.py  status_dto.py
mlaide/model/: __init__.py  artifact.py  artifact_file.py  artifact_ref.py  experiment.py  git.py  in_memory_artifact_file.py  local_artifact_file.py  model.py  new_artifact.py  run.py  user_ref.py
modelversioncontrol/: active_artifact.py  active_experiment.py  active_run.py  artifact.py  client.py  experiment.py  mapper.py  run.py
modelversioncontrol/_api_client/: __init__.py  client.py  errors.py
modelversioncontrol/_api_client/api/: artifacts.py  projects.py  runs.py
modelversioncontrol/_api_client/async_api/: experiments.py
modelversioncontrol/_api_client/dto/: artifact_dto.py  artifact_ref_dto.py  error.py  helper.py  run_dto.py  runs_dto.py
modelversioncontrol/_api_client/models/: __init__.py  artifact.py  artifact_ref.py  model.py  projects.py  run.py  runs.py  stage.py
modelversioncontrol/api_client/: errors.py
modelversioncontrol/api_client/api/: experiments.py  projects.py
modelversioncontrol/api_client/async_api/: experiments.py  projects.py
modelversioncontrol/api_client/models/: __init__.py  experiment.py  experiment_ref.py  experiments.py  project.py  run.py  status.py
modelversioncontrol/model/: artifact.py  artifact_ref.py  model.py  run.py
tests/: test_active_artifact.py  test_active_run.py  test_client.py
tests/_api_client/api/: test_api_commons.py  test_artifact_api.py  test_experiment_api.py  test_run_api.py
